log/build_2024-05-27_14-17-31/action_py/stderr.log
  File "/home/sambhav/ros2_ws/install/action_py/lib/python3.10/site-packages/action_py/robot_movement_server.py", line 17
    goal_callback=self.goal_callback
                  ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

